<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Fragments.login.ForgotPasswordFragment">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/forgotPassword_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:backgroundTint="@color/toolbarBackgroundColor"
        android:elevation="16dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resetPasswordDesc_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/we_ll_send_an_otp_to_your_email_address_to_finalise_changing_your_password"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/email_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lock_imageView" />

    <TextView
        android:id="@+id/email_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/email"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/resetPasswordDesc_textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/resetPasswordDesc_textView"
        app:layout_constraintTop_toBottomOf="@+id/resetPasswordDesc_textView" />

    <EditText
        android:id="@+id/email_editTextTextEmailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/e_g_matlatle_gmail_com"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/email_textView"
        app:layout_constraintStart_toStartOf="@+id/email_textView"
        app:layout_constraintTop_toBottomOf="@+id/email_textView" />

    <TextView
        android:id="@+id/newPassword_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/new_password"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/email_editTextTextEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/email_editTextTextEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/email_editTextTextEmailAddress" />

    <EditText
        android:id="@+id/newPassword_editTextTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/your_new_password"
        android:inputType="textPassword"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/newPassword_textView"
        app:layout_constraintStart_toStartOf="@+id/newPassword_textView"
        app:layout_constraintTop_toBottomOf="@+id/newPassword_textView" />

    <TextView
        android:id="@+id/confirmPassword_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/confirm_password"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/newPassword_editTextTextPassword"
        app:layout_constraintStart_toStartOf="@+id/newPassword_editTextTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/newPassword_editTextTextPassword" />

    <EditText
        android:id="@+id/confirmPassword_editTextTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/confirm_new_password"
        android:inputType="textPassword"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/confirmPassword_textView"
        app:layout_constraintStart_toStartOf="@+id/confirmPassword_textView"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword_textView" />

    <Button
        android:id="@+id/update_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/btn_shape"
        android:text="Reset"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/backToLogin_textView"
        app:layout_constraintEnd_toEndOf="@+id/backToLogin_textView"
        app:layout_constraintStart_toStartOf="@+id/backToLogin_textView" />

    <TextView
        android:id="@+id/backToLogin_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/back_to_login"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/lock_imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/icons8_forgotpassword_100"
        app:layout_constraintBottom_toTopOf="@+id/resetPasswordDesc_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassword_toolbar" />

</androidx.constraintlayout.widget.ConstraintLayout>